--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-webpack": "webpack"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "pinia": "^2.0.29",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.1.0",
+    "vuex-module-decorators": "^2.0.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
@@ -32,7 +36,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "node-sass": "^8.0.0",
     "prettier": "^2.4.1",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5"
   }
