--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-webpack": "webpack"
   },
   "dependencies": {
+    "axios": "^1.2.3",
     "core-js": "^3.8.3",
     "pinia": "^2.0.29",
     "vue": "^3.2.13",
