--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.2.3",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.29",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
